--- a/index.css
+++ b/index.css
@@ -192,7 +192,8 @@ li, .logo{
   color: #fff;
   min-height: 50vh;
   display: flex;
-  justify-content: center;
+   justify-content: center; 
+  text-align: center;
   /* align-items: center; */
 }
 .techstacks .intro{
